# metarbot

./: Cargo.toml  config.toml  config.toml.sample
src/: lib.rs
src/modules/: ircactions.rs  metar.rs  mod.rs
src/util/: mod.rs
